Bug 238742 - Mouse wheel to switch to next or previous image does not work on "Loading <file> failed" screens
Summary: Mouse wheel to switch to next or previous image does not work on "Loading <fi...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-25 00:08 UTC by Eike Hein
Modified: 2012-10-19 13:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2010-05-25 00:08:32 UTC
This applies to Gwenview 2.4.3 in KDE 4.4.3.

When browsing images in a folder that contains corrupted (e.g. partially downloaded, due to KTorrent still downloading) images, you often hit upon a "Loading '<filename>' failed" screen. On this screen it is not possible to use the mouse wheel above the viewer background or the error message to switch to the next or previous image. The Next/Previous Image toolbar actions do still work, however.

I think the wheel should still work in this scenario (it does normally work over the viewer background when an image loaded successfully) to make it less annoying when a corrupted file is encountered while browsing.
Comment 1 Aurelien Gateau 2010-12-19 16:51:52 UTC
SVN commit 1207750 by gateau:

Make mouse-wheel-browse behavior work on all types of views (raster, video, svg, broken)

BUG:238742

 M  +15 -0     documentview/documentview.cpp  
 M  +0 -1      documentview/imageviewadapter.cpp  
 M  +5 -5      gwenviewconfig.kcfg  
 A             mousewheelbehavior.h   [License: GPL (v2+)]
 M  +2 -23     scrolltool.cpp  
 M  +0 -3      scrolltool.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207750
Comment 2 Eike Hein 2010-12-19 17:02:36 UTC
Thanks!