Make mouse-wheel-browse behavior work on all types of views (raster, video, svg, broken)

BUG:238742

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=1207750